--- a/src/App.css
+++ b/src/App.css
@@ -1,251 +1,42 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-span,
-div {
-  font-family: "Montserrat", sans-serif;
-}
-
-svg {
-  padding: 5px;
-}
-ul {
-  list-style-type: none;
-  padding-left: 0;
-}
-
-/*= Navigation */
-.navigation {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: white;
-  padding: 10px 20px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  position: relative;
-  z-index: 10;
-}
-
-.navigation #logout {
-  background: red;
-  color: white;
-}
-.logo a {
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.menu {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-}
-
-.menu li {
-  margin-left: 20px;
-  position: relative;
-}
-
-.menu li a,
-.menu li button {
-  text-decoration: none;
-  display: flex;
-  align-items: center;
-  background: none;
-  border: none;
-  cursor: pointer;
-  padding: 16px 12px;
-  font-size: medium;
-}
-
-.menu li a:hover,
-.menu li button:hover {
-  background-color: #6dd6ff;
-  border-radius: 10px;
-}
-
-.dropdown-menu {
-  display: block;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 250px;
-  background-color: white;
-  border: 1px solid #ddd;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  padding: 10px;
-  z-index: 5;
-}
-
-.dropdown-menu li {
-  margin: 5px 0;
-}
-
-.dropdown-menu li a {
-  text-decoration: none;
-  padding: 5px;
-  display: block;
-}
-
-.dropdown-menu li a:hover {
-  background-color: #56ccff;
-}
-
-.menu-toggle {
-  display: none;
-  font-size: 24px;
-  cursor: pointer;
-}
-
-@media (max-width: 768px) {
-  .navigation {
-    flex-direction: column;
-  }
-
-  .menu li {
-    margin: 10px 0;
-  }
-  .menu {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 50px;
-    left: 0;
-    width: 100%;
-    background-color: #fff;
-    padding: 10px;
-  }
-
-  .menu.open {
-    display: flex;
-  }
-
-  .menu-toggle {
-    display: block;
-  }
-}
-/*= Footer */
-
-.site-footer {
-  background-color: #333;
-  color: #fff;
-  padding: 40px 0;
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
   text-align: center;
 }
 
-.footer-container {
-  max-width: 1400px; /* Rộng hơn cho màn hình lớn */
-  margin: 0 auto;
-  padding: 0 40px; /* Tăng khoảng cách padding */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  position: relative;
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-.footer-logo a {
-  font-size: 28px;
-  color: #fff;
-  font-weight: bold;
-  text-decoration: none;
-  margin-bottom: 20px;
-}
-
-.footer-nav ul {
-  list-style: none;
-  padding: 0;
-  margin-top: 0;
-  margin-bottom: 20px;
-}
-
-.footer-nav ul li {
-  margin-bottom: 10px; /* Khoảng cách lớn hơn giữa các mục */
-}
-
-.footer-nav ul li a {
-  color: #fff;
-  text-decoration: none;
-  font-size: 16px;
-}
-
-.footer-nav ul li a:hover {
-  text-decoration: underline;
-}
-
-.footer-info {
-  text-align: left;
-}
-
-.footer-info h4 {
-  margin: 0;
-  font-size: 18px;
-}
-
-.footer-info p {
-  margin: 5px 0;
-}
-
-.footer-social a {
-  margin: 0 15px; /* Khoảng cách giữa các biểu tượng mạng xã hội */
-  color: #fff;
-  text-decoration: none;
-  font-size: 16px;
-}
-
-.footer-social a:hover {
-  text-decoration: underline;
-}
-
-.footer-copyright {
-  margin-top: 30px;
-  font-size: 14px;
-  position: absolute;
-  bottom: -30px;
-}
-@media (min-width: 768px) {
-  .footer-container {
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-between;
-    text-align: left;
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
   }
-
-  .footer-logo {
-    margin-bottom: 0;
-  }
-
-  .footer-nav ul {
-    justify-content: flex-start;
+  to {
+    transform: rotate(360deg);
   }
 }
 
-@media (max-width: 767px) {
-  .footer-container {
-    flex-direction: column;
-    padding: 0 20px;
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
   }
+}
 
-  .footer-nav ul {
-    display: none;
-  }
+.card {
+  padding: 2em;
+}
 
-  .footer-nav ul li {
-    margin: 10px 0;
-  }
-
-  .footer-social {
-    margin-top: 15px;
-  }
-  .footer-copyright {
-    position: relative;
-  }
+.read-the-docs {
+  color: #888;
 }
